--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1472,12 +1472,20 @@ small.search_term {
 
 .controls {
     padding-top: .5em;
-    border-top: 1px solid #ddd;
 }
 
 /* manage-fields */
 
+.manage-fields {
+    border-bottom: 1px solid #bbb;
+    padding-bottom: .5em;
+}
+
 .manage-fields .permissions ul {
     list-style-type: none;
     padding: 0;
+}
+
+.manage-fields h4 {
+    display: inline;
 }
