--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1481,7 +1481,7 @@ small.search_term {
     padding-bottom: .5em;
 }
 
-.manage-fields .permissions ul {
+.manage-fields #permissions ul {
     list-style-type: none;
     padding: 0;
 }
