--- a/views/snippets/layout_permissions.tt
+++ b/views/snippets/layout_permissions.tt
@@ -7,47 +7,52 @@
     END;
 %]
     <li data-group-id="[% perm %]">
-        <h5>[% group.name %]</h5>
-        <button type="button" class="btn btn-sm btn-default" data-perm-id="[% perm %]">Delete rule</button>
+        <h5>
+            [% group.name %]
+            <button type="button" class="btn btn-sm btn-default" data-perm-id="[% perm %]">Delete rule</button>
+        </h5>
 
         <section>
             <h6>Access</h6>
-            <div class="form-group">
-                <input type="checkbox" id="can_read" name="read" [% column.group_has(perm, 'read') && 'checked' %]>
-                <label for="can_read">Read</label>
-            </div>
+            <div class="row">
+                <div class="form-group col-md-3">
+                    <input type="checkbox" id="can_read" name="read" [% column.group_has(perm, 'read') && 'checked' %]>
+                    <label for="can_read">Read</label>
+                </div>
 
-             <div class="form-group">
-                <input type="checkbox" id="[% perm %]-can_write_new" name="write_new" [% column.group_has(perm, 'write_new') && 'checked' %]>
-                <label for="[% perm %]-can_write_new">Write values to new records</label>
-            </div>
+                 <div class="form-group col-md-3">
+                    <input type="checkbox" id="[% perm %]-can_write_new" name="write_new" [% column.group_has(perm, 'write_new') && 'checked' %]>
+                    <label for="[% perm %]-can_write_new">Write values to new records</label>
+                </div>
 
-            <div class="form-group">
-                <input type="checkbox" id="[% perm %]-can_edit_existing" name="write_existing" [% column.group_has(perm, 'write_existing') && 'checked' %]>
-                <label for="[% perm %]-can_edit_existing">Edit existing values</label>
+                <div class="form-group col-md-3">
+                    <input type="checkbox" id="[% perm %]-can_edit_existing" name="write_existing" [% column.group_has(perm, 'write_existing') && 'checked' %]>
+                    <label for="[% perm %]-can_edit_existing">Edit existing values</label>
+                </div>
             </div>
         </section>
 
         <section>
             <h6>Approval</h6>
-            <div class="form-group">
-                <input type="checkbox" id="[% perm %]-can_create_without_approval" name="write_new_no_approval" [% column.group_has(perm, 'write_new_no_approval') && 'checked' %]>
-                <label for="[% perm %]-can_create_without_approval">No approval required for new records</label>
-            </div>
-            <div class="form-group">
-                <input type="checkbox" id="[% perm %]-can_edit_without_approval" name="write_existing_no_approval" [% column.group_has(perm, 'write_existing_no_approval') && 'checked' %]>
-                <label for="[% perm %]-can_edit_without_approval">No approval required for editing values</label>
-            </div>
-            <div class="form-group">
-                <input type="checkbox" id="[% perm %]-can_approve_new" name="approve_new" [% column.group_has(perm, 'approve_new') && 'checked' %]>
-                <label for="[% perm %]-can_approve_new">Approve new values</label>
-            </div>
-            <div class="form-group">
-                <input type="checkbox" id="[% perm %]-can_approve_edits" name="approve_existing" [% column.group_has(perm, 'approve_existing') && 'checked' %]>
-                <label for="[% perm %]-can_approve_edits">Approve edits</label>
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <input type="checkbox" id="[% perm %]-can_create_without_approval" name="write_new_no_approval" [% column.group_has(perm, 'write_new_no_approval') && 'checked' %]>
+                    <label for="[% perm %]-can_create_without_approval">No approval required for new records</label>
+                </div>
+                <div class="form-group col-md-6">
+                    <input type="checkbox" id="[% perm %]-can_edit_without_approval" name="write_existing_no_approval" [% column.group_has(perm, 'write_existing_no_approval') && 'checked' %]>
+                    <label for="[% perm %]-can_edit_without_approval">No approval required for editing values</label>
+                </div>
+                <div class="form-group col-md-6">
+                    <input type="checkbox" id="[% perm %]-can_approve_new" name="approve_new" [% column.group_has(perm, 'approve_new') && 'checked' %]>
+                    <label for="[% perm %]-can_approve_new">Approve new values</label>
+                </div>
+                <div class="form-group col-md-6">
+                    <input type="checkbox" id="[% perm %]-can_approve_edits" name="approve_existing" [% column.group_has(perm, 'approve_existing') && 'checked' %]>
+                    <label for="[% perm %]-can_approve_edits">Approve edits</label>
+                </div>
             </div>
         </section>
-
     </li>
 [% END %]
 
@@ -74,7 +79,7 @@
 [% END %]
 
 [% BLOCK layout_permissions %]
-<section id="layout_permissions">
+<section id="permissions">
     <h3>Permissions [% whats_this('modalhelp_groups') %]</h3>
     [% IF column.id %]
 
