Restructure layout advanced settings

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1,3 +1,23 @@
+/* a11y-related */
+.visually-hidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px; }
+
+.visually-hidden-opacity {
+  opacity: 0; }
+
+/* general util */
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both; }
+
 /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 @font-face {
   font-family: 'Open Sans remote';
@@ -1134,20 +1154,6 @@ button.close {
 .carousel-control .icon-prev, .carousel-control .icon-next {
   margin-left: -10px; }
 
-/* a11y-related */
-.visually-hidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px; }
-
-.visually-hidden-opacity {
-  opacity: 0; }
-
 /* Login page - Remember Username */
 .remember-me, .reset-password {
   display: inline-block;
@@ -1243,7 +1249,8 @@ small.search_term {
 .expandable {
   display: none; }
 
-.trigger[aria-expanded="true"] + .expandable {
+.trigger[aria-expanded="true"] + .expandable,
+.expandable.expanded {
   display: block; }
 
 /* Person contact details popover */
@@ -1336,11 +1343,13 @@ small.search_term {
   list-style-type: none;
   padding: 0; }
 
-#manage-fields h4 {
-  display: inline; }
-
 #manage-fields .field-options {
-  display: none; }
+  display: none;
+  border: 1px solid #ccc;
+  padding: .5em;
+  margin: .5em;
+  margin-right: 0;
+  background-color: #eee; }
 
 #manage-fields.column-type-calc .field-options.calc {
   display: block; }
@@ -1372,3 +1381,27 @@ small.search_term {
 #manage-fields.column-type-rag #options .stored-value,
 #manage-fields.column-type-calc #options .stored-value {
   display: none; }
+
+#manage-fields #advanced-field-settings h3,
+#manage-fields h4 {
+  display: inline-block;
+  border-bottom: 1px solid #bbb;
+  padding-bottom: .5em; }
+
+#manage-fields .permission.write-new .permission,
+#manage-fields .permission.modify-existing .permission {
+  display: none;
+  margin-left: 1.5em; }
+
+#manage-fields .permission.write-new input:checked ~ .permission,
+#manage-fields .permission.modify-existing input:checked ~ .permission {
+  display: block; }
+
+#manage-fields .permission-rule h5 {
+  margin: 0;
+  padding: 0; }
+
+#manage-fields .permission-rule {
+  background-color: #eee;
+  border: 1px solid #ccc;
+  padding: .5em; }
