--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1511,7 +1511,8 @@ small.search_term {
     padding: 0;
 }
 
-#manage-fields .permission-rule {
+#manage-fields .permission-rule,
+#manage-fields .display-condition {
     background-color: #eee;
     border: 1px solid #ccc;
     padding: .5em;
