--- a/views/layout.tt
+++ b/views/layout.tt
@@ -111,26 +111,31 @@
 [% BLOCK field_display_conditions %]
     <section id="display_conditions">
         <h4>Display</h4>
-    [% UNLESS column.display_field %]
+    [% UNLESS column.display_regex %]
         <p>This field is always displayed.</p>
         <button type="button" aria-expanded="false" class="trigger btn btn-default" id="add-display-regex">Configure display</button>
     [% END %]
-    <div class="row expandable">
-        <div class="form-group col-md-4">
-            <label for="display_field">Column</label>
-            <select class="form-control" id="display_field" name="display_field">
-                [% FOREACH field in all_columns %]
-                    <option value="[% field.id %]" [% IF column.display_field == field.id %]selected[% END %]>[% field.name | html_entity %]</option>
-                [% END %]
-            </select>
+    <div class="expandable [% column.display_regex && 'expanded' %]">
+        <p>This field will only be displayed under the following condition:</p>
+        <div class="display-condition clearfix">
+            <div class="clearfix">
+                    <button type="button" class="btn btn-sm btn-default pull-right" id="delete-display-condition">Delete condition</button>
+            </div>
+            <div class="form-group col-md-12">
+                <label for="display_field">Column</label>
+                <select class="form-control" id="display_field" name="display_field">
+                    [% FOREACH field in all_columns %]
+                        <option value="[% field.id %]" [% IF column.display_field == field.id %]selected[% END %]>[% field.name | html_entity %]</option>
+                    [% END %]
+                </select>
+            </div>
+            <div class="form-group col-md-12">
+                matches
+                <label for="display_regex">pattern</label>
+                [% whats_this('modalhelp_match') %]
+                <input type="text" class="form-control" id="display_regex" name="display_regex" value="[% column.display_regex | html_entity %]">
+            </div>
         </div>
-        <div class="col-md-3">
-            <p>matches [% whats_this('modalhelp_match') %]</p>
-        </div>
-        <div class="col-md-5 form-group">
-            <label for="display_regex">pattern</label>
-            <input type="text" class="form-control" id="display_regex" name="display_regex" value="[% column.display_regex | html_entity %]">
-    </div>
     </div>
     </section>
 [% END %]
