Fix botched merge missing closing brace

--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1448,6 +1448,7 @@ small.search_term {
 .rag .unexpected {
     border-bottom-color: $rag-unexpected;
     background-color: $rag-unexpected-bg;
+}
 
 /* Data table */
 
