--- a/views/edit.tt
+++ b/views/edit.tt
@@ -57,6 +57,8 @@
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
+[% WRAPPER modal_dialog.tt modal_id="readmore_modal" modal_large=1 %]
+[% END %]
 
 <script type="text/javascript">
     var jscode='[% FILTER remove('\n+') %]
@@ -78,6 +80,14 @@
             $('#helptext_modal').on('show.bs.modal', function (e) {
                 var loadurl = $(e.relatedTarget).data('load-url');
                 $(this).find('.modal-body').load(loadurl);
+            });
+
+            $(document).on("mousedown", ".moreinfo", function(e) {
+                var record_id = $(e.target).data('record-id');
+                var m = $("#readmore_modal");
+                m.find('.modal-body').text('Loading...');
+                m.find('.modal-body').load('/record_body/' + record_id + '?oi=2');
+                m.modal();
             });
 
             $('.input-daterange input.from').each(function (){
@@ -489,6 +499,7 @@
                                             data-content="<span title='[% enumval.value | html_entity %]'>
                                                 [% enumval.mainvalue | html_entity %]
                                                 <small class='text-muted'>[% enumval.subvalue | html_entity %]</small>
+                                                <span class='moreinfo' data-record-id='[% enumval.id %]'>Read more...</span>
                                             </span>"
                                         [% END %]
                                     >
