--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1418,23 +1418,27 @@ small.search_term {
 #current-permissions .permission-read .abbreviation-read {
   display: inline; }
 
-#current-permissions .permission-write-new .abbreviation-write-new {
-  display: inline; }
-
-#current-permissions .permission-write-existing .abbreviation-write-existing {
-  display: inline; }
-
 #current-permissions .permission-approve-new .abbreviation-approve-new {
   display: inline; }
 
 #current-permissions .permission-approve-existing .abbreviation-approve-existing {
   display: inline; }
 
+#current-permissions .permission-write-new .abbreviation-write-new {
+  display: inline; }
+
 #current-permissions .permission-write-new-no-approval .abbreviation-write-new-no-approval {
+  display: inline; }
+
+#current-permissions .permission-write-existing .abbreviation-write-existing {
   display: inline; }
 
 #current-permissions .permission-write-existing-no-approval .abbreviation-write-existing-no-approval {
   display: inline; }
+
+#current-permissions .permission.permission-write-new .abbreviation-write-new-no-approval,
+#current-permissions .permission.permission-write-existing .abbreviation-write-existing-no-approval {
+  display: none; }
 
 #current-permissions .abbreviation,
 #current-permissions .permission.edit .configuration,
