--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -170,7 +170,7 @@
                                         <li><a href="" data-toggle="modal" data-target="#modal-sendemail">Email users</a></li>
                                         <li><a href="/user?download">Download users</a></li>
                                         <li class="divider"></li>
-                                        <li [% IF page=="group" %]class="active"[% END %]><a href="[% url.page %]/group/">Groups</a></li>
+                                        <li [% IF page=="group" %]class="active"[% END %]><a href="[% url.page %]/group/">Manage groups</a></li>
                                         <li [% IF page=="" %]class="active"[% END %]><a href="[% url.page %]/group/0">Add a group</a></li>
                                     </ul>
                                 </li>
