Many updates from review

--- a/views/graph.tt
+++ b/views/graph.tt
@@ -1,5 +1,5 @@
 [% IF graph.defined %]
-<h2>[% IF graph.id %]Add a graph[% ELSE %]Edit graph[% END %]</h2>
+<h2>[% IF graph.id %]Edit graph[% ELSE %]Add a graph[% END %]</h2>
 <form role="form" method="post">
     <div class="row">
         <div class="col-md-6">
