Remove Instance.pm

--- a/views/index.tt
+++ b/views/index.tt
@@ -1,14 +1,14 @@
 <div class="row">
-    [% IF instance.homepage_text2 %]
+    [% IF layout.homepage_text2 %]
         <div class="col-md-6">
     [% ELSE %]
         <div class="col-md-12">
     [% END %]
-            [% instance.homepage_text %]
+            [% layout.homepage_text %]
         </div>
-    [% IF instance.homepage_text2 %]
+    [% IF layout.homepage_text2 %]
         <div class="col-md-6">
-            [% instance.homepage_text2 %]
+            [% layout.homepage_text2 %]
         </div>
     [% END %]
 </div>
