Use word-wrap (IE5-7) and overflow-wrap for long word breaking

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1335,4 +1335,6 @@ small.search_term {
   padding: .5em;
   margin-top: .5em;
   width: 80%;
-  word-break: break-word; }
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  word-break: initial; }
