--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1481,5 +1481,7 @@ small.search_term {
     padding: .5em;
     margin-top: .5em;
     width: 80%;
-    word-break: break-word;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    word-break: initial;
 }
