--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -26,7 +26,7 @@
             <link rel="stylesheet" href="[% scheme %]://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         [% END %]
 
-        <title>Linkspace [% page %]</title>
+        <title>[% page %] | Linkspace</title>
 
         <!-- Custom styles for this template -->
         [% UNLESS page_as_mech %]
