--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -110,7 +110,7 @@
             [% END %]
         </header>
 
-        <main role="main" id="main" class="container">
+        <main role="main" id="main" class="container-fluid">
             [% content %]
         </main>
 
