Add margin to container-fluid main

--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -70,9 +70,15 @@ html {
   overflow-x: visible;
   margin-right: 20px;
 }
+
+
 body {
   margin-top: 20px;
   font-weight:100;
+}
+
+main.container-fluid {
+    margin: 1em;
 }
 
 a {
