--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -31,6 +31,9 @@ body {
   margin-top: 20px;
   font-weight: 100; }
 
+main.container-fluid {
+  margin: 1em; }
+
 a {
   background: transparent;
   text-decoration: underline; }
