--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -59,11 +59,8 @@ html {
   font-family: 'Open Sans remote',sans-serif;
 }
 
-#wrapper{
-  width: 95%; 
+header {
   border-top: 5px solid $primary-navy; 
-  margin-left: auto; 
-  margin-right: auto; 
 }
 
 .hscroll{
@@ -740,7 +737,7 @@ select.input-group-sm>.form-control,select.input-group-sm>.input-group-addon,sel
         color:$primary-navy;
 }
 
-#main-navbar .dropdown-toggle {
+nav .dropdown-toggle {
     font-size: 22px;
     border: 0;
     line-height: 21px;
@@ -750,8 +747,8 @@ select.input-group-sm>.form-control,select.input-group-sm>.input-group-addon,sel
 }
 
 
-#main-navbar .dropdown-toggle:focus,
-#main-navbar .dropdown-toggle:hover {
+nav .dropdown-toggle:focus,
+nav .dropdown-toggle:hover {
     outline: 2px solid #85bffd;
 }
 
