--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -72,7 +72,7 @@
                         </button>
                     [% END %]
 
-                    [% IF col.type == "person" AND user.permission.message AND records.size %]
+                    [% IF col.type == "person" AND layout.user_can("message") AND records.size %]
                         <button aria-haspopup="true" data-toggle="modal" data-target="#modal_sendemail" data-peopcol_id="[% col.id %]">
                             <span class="visually-hidden">Send e-mail</span>&#x2709;
                         </button>
