--- a/views/edit.tt
+++ b/views/edit.tt
@@ -20,7 +20,7 @@
         <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">Action <b class="caret"></b></button>
         <ul class="dropdown-menu scrollable-menu" role="menu" aria-labelledby="edit_action">
             <li role="presentation"><a role="menuitem" href="/edit/?from=[% record.current_id %]">Copy record</a></li>
-            [% IF user.permission.create_child AND NOT record.parent_id %]
+            [% IF layout.user_can("create_child") AND NOT record.parent_id %]
                 <li role="presentation"><a role="menuitem" href="/edit/?child=[% record.current_id %]">Create child record</a></li>
             [% END %]
             [% IF user.permission.link %]
@@ -58,7 +58,9 @@
             <button type="submit" name="submit" value="submit" class="btn btn-primary submit_button">
                 [% IF record.has_next_values AND page != "bulk" %]Next[% ELSE %]Save[% END %]
             </button>
-            <a role="button" class="btn btn-default" href="" data-toggle="modal" data-target="#modaldelete">Delete</a></li>
+            [% IF record.user_can_delete %]
+                <a role="button" class="btn btn-default" href="" data-toggle="modal" data-target="#modaldelete">Delete</a>
+            [% END %]
             <a href="/data" class="btn btn-default">Cancel</a>
         </div>
     </nav>
@@ -76,7 +78,7 @@
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-[% IF user.permission.delete || user.permission.delete_noneed_approval %]
+[% IF record.user_can_delete %]
    <!-- Modal -->
     <div class="modal fade" id="modaldelete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -374,7 +376,7 @@
     [%# Skip field if it's an approval request but a value not needing approval %]
     [% NEXT IF page == "approval" AND NOT (record.fields.$colid.has_value)  %]
     [%# Skip if it's a child record and the value doesn't exist %]
-    [% NEXT IF record.parent_id AND NOT (record.fields.$colid.has_value) AND NOT user.permission.create_child %]
+    [% NEXT IF record.parent_id AND NOT (record.fields.$colid.has_value) AND NOT layout.user_can("create_child") %]
     [%# Skip if it's a linked record and the value is linked %]
     [% IF record.linked_id AND dispcol.link_parent %]
         <input type="hidden" name="[% field %]">
@@ -444,7 +446,7 @@
             [% END %]
             [% label = label _ label_add %]
         [% END %]
-        [% IF child AND user.permission.create_child %]
+        [% IF child AND layout.user_can("create_child") %]
             <div class="checkbox">
                 <label>
                     <input type="checkbox" name="child_inc" value="[% dispcol.id %]"
