--- a/sass/_branding-colours.scss
+++ b/sass/_branding-colours.scss
@@ -1,5 +1,7 @@
 $primary-navy: #1460aa;
 
+$heading-blue: #7276ad;
+
 $rag-undefined  : rgb(160, 159, 160); // aluminium
 $rag-danger     : rgb(185, 74, 72);
 $rag-warning    : rgb(192, 152, 99);
